--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.9"
+    "@astrojs/preact": "^4.1.3",
+    "astro": "^5.16.9",
+    "preact": "^10.28.2"
   }
 }
