--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   },
   "dependencies": {
     "@astrojs/preact": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.9",
-    "preact": "^10.28.2"
+    "katex": "^0.16.27",
+    "preact": "^10.28.2",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
